# aethyr

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
.agents/rules/: general.md
.github/workflows/: ci.yml
contracts/aethyr-router/: Cargo.toml
contracts/aethyr-router/contracts/aethyr-escrow/: Cargo.toml
contracts/aethyr-router/contracts/aethyr-escrow/src/: lib.rs  test.rs
contracts/aethyr-router/contracts/aethyr-escrow/test_snapshots/test/: test_auto_release_fails_before_time.1.json  test_auto_release_fails_if_disputed.1.json  test_auto_release_fails_not_submitted.1.json  test_dispute_and_auto_release_flow.1.json  test_milestone_release_flow.1.json  test_refund_flow_fails_before_expiration.1.json  test_refund_flow_success.1.json
contracts/aethyr-router/contracts/aethyr-router/: Cargo.toml
contracts/aethyr-router/contracts/aethyr-router/src/: lib.rs  test.rs
contracts/aethyr-router/contracts/aethyr-router/test_snapshots/test/: test_route_payment_fallback.1.json  test_route_payment_slippage_exceeded.1.json  test_route_payment_with_swap.1.json  test_route_to_escrow.1.json
docs/: AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  MASTERPLAN.md  PROGRESS.md  REDESIGN_PLAN.md  STYLE-GUIDE.md
public/: manifest.json
scripts/: pre-commit.sh
src/app/: layout.tsx  page.test.tsx  page.tsx
src/components/: ActivityTab.test.tsx  ActivityTab.tsx  BottomNav.tsx  EscrowTab.test.tsx  EscrowTab.tsx  MilestoneBuilder.test.tsx  MilestoneBuilder.tsx  ProfileDrawer.test.tsx  ProfileDrawer.tsx  SendTab.test.tsx  SendTab.tsx  SettingsTab.tsx  (+4 more)
(+11 files in other folders)
