[package]
name = "aethyr-escrow"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
ed25519-dalek = { version = "=2.2.0", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
